# nakama-cocos2d-x

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.rej  CMakePresets.json  README.md  RELEASEINST.md  cocos.patch  nakama-cpp-cocos2d-x-config.cmake.in  release.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build_all.yml  build_android.yml  build_ios.yml  build_linux.yml  build_osx.yml  build_windows.yml
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.h
Classes/Nakama/Private/: NCocosTransport.cpp  NCocosTransport.h  NWebSocket.cpp  NWebSocket.h  PlatfromIntegration.cpp  PlatfromIntegration.h
Classes/Nakama/Private/NakamaSDK/: NAuthenticateMessage.cpp  NClient.cpp  NCursor.cpp  NLogger.cpp  NSession.cpp
Classes/Nakama/Public/: NCocosLogSink.h
Classes/Nakama/Public/NakamaSDK/: Defines.h  INTransport.h  NAuthenticateMessage.h  NClient.h  NConsoleLogSink.h  NError.h  NGroupSelf.h  NGroupUser.h  NGroupsSelfListMessage.h  NLeaderboardRecordsFetchMessage.h  NLeaderboardRecordsListMessage.h  NLeaderboardsListMessage.h  NMatchLeaveMessage.h  NMatchPresence.h  NMatchmakeFilter.h  NMatchmakeMatched.h  NMatchmakeUserProperty.h  NNotificationsListMessage.h  NNotificationsRemoveMessage.h  NResultSet.h  NStorageFetchMessage.h  NTopic.h  NTopicId.h  NTopicMessage.h  NTopicMessagesListMessage.h  NTopicPresence.h
Classes/NakamaCocos2d/: NWebSocket.cpp
example/: .cocos-project.json  .gitignore  CMakeLists.txt  README.md
example-xcode/: CMakeLists.txt
example-xcode/Classes/: AppDelegate.cpp
example-xcode/proj.ios_mac/ios/: Info.plist
example-xcode/proj.ios_mac/mac/: Info.plist
example/Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h
example/Classes/NakamaCocos2d/: NCocosHTTP.cpp  NCocosHTTP.h  NCocosWebSocket.cpp  NCocosWebSocket.h  NWebSocket.cpp  NWebSocket.h
example/proj.android/: build.gradle  gradle.properties  settings.gradle
example/proj.android/app/: AndroidManifest.xml  build.gradle
example/proj.android/app/jni/: Android.mk
example/proj.android/app/res/values/: strings.xml
example/proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java
example/proj.android/gradle/wrapper/: gradle-wrapper.properties
example/proj.ios_mac/NakamaCocos2d.xcodeproj/: project.pbxproj
example/proj.ios_mac/NakamaCocos2d.xcodeproj/xcshareddata/xcschemes/: NakamaCocos2d-mobile.xcscheme
example/proj.ios_mac/ios/: Info.plist
example/proj.win32/: .gitignore  NakamaCocos2d.sln  NakamaCocos2d.vcxproj  NakamaCocos2d.vcxproj.filters
include/: NCocosHelper.h  NCocosLogSink.h  StrUtil.h
nakama-cocos2d-x-sdk/: CMakeLists.txt
nakama-cocos2d-x-sdk/NakamaCocos2d/: NCocosHTTP.cpp  NCocosHelper.cpp  NWebSocket.h
nakama-cocos2d-x-sdk/nakama-cpp-android/: Android.mk
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
proj.android-studio/: settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/jni/: Android.mk
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.android/res/values/: strings.xml
proj.ios_mac/NakamaCocos2d.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: NakamaCocos2d.sln  NakamaCocos2d.vcxproj  NakamaCocos2d.vcxproj.filters
release/: build_config.py  release.py
src/: CMakeLists.txt  NCocosHTTP.cpp  NCocosHelper.cpp  StrUtil.cpp  vcpkg-configuration.json  vcpkg.json
src/NakamaCocos2d/: NCocosHTTP.cpp  NCocosHelper.h
src/nakama-cpp-android/: Android.mk
triplets/: arm64-android-release.cmake  arm64-ios-release.cmake  arm64-osx-release.cmake  x64-android-release.cmake  x64-iphonesimulator-release.cmake  x64-osx-release.cmake  x86-windows-release.cmake
